--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@types/express": "^4.17.21",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "mongoose": "^8.5.1"
   }
 }
